unpackaged/main/default/objects/Milestone1_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user responsible for completing the task. Defaults to current user if left blank.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Tasks_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>