unpackaged/main/default/objects/Milestone1_Task__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this task blocked for some reason?</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>