unpackaged/main/default/objects/Milestone1_Task__c/fields/Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Days_Late__c</fullName>
    <inlineHelpText>How many days late is this task?</inlineHelpText>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>