unpackaged/main/default/objects/Milestone1_Task__c/fields/Days_Late_Formula__c.field-meta.xml
<CustomField>
    <fullName>Days_Late_Formula__c</fullName>
    <formula>Today() -  Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Late Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>