unpackaged/main/default/objects/Milestone1_Task__c/fields/Estimated_Expense__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Expense__c</fullName>
    <inlineHelpText>The estimated amount of expenses which will be incurred during the task.</inlineHelpText>
    <label>Estimated Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>