unpackaged/main/default/objects/Milestone1_Task__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <inlineHelpText>The estimated time to complete the task.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>