unpackaged/main/default/objects/Milestone1_Task__c/fields/Expense_Balance__c.field-meta.xml
<CustomField>
    <fullName>Expense_Balance__c</fullName>
    <formula>Estimated_Expense__c - Total_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as estimated expense - total expense</inlineHelpText>
    <label>Expense Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>