unpackaged/main/default/objects/Milestone1_Task__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <externalId>true</externalId>
    <label>Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>