unpackaged/main/default/objects/Milestone1_Task__c/fields/Index_Helper__c.field-meta.xml
<CustomField>
    <fullName>Index_Helper__c</fullName>
    <formula>Assigned_To__r.FirstName &amp; ' ' &amp; Assigned_To__r.LastName &amp; ' ' &amp; Project_Milestone__r.Project__r.Name &amp; ' ' &amp; Project_Milestone__r.Name &amp; ' complete:' &amp; IF(Complete__c, 'yes', 'no') &amp; ' ' &amp; Name</formula>
    <label>Index Helper</label>
    <type>Text</type>
</CustomField>