unpackaged/main/default/objects/Milestone1_Task__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <formula>if ( Complete__c == true, 'Complete',
  if ( and( Days_Late_Formula__c &gt; 0,  Blocked__c  ),
    if(Len( Text(Task_Stage__c))&gt;0 , 'Late &amp; Blocked ' &amp; Text(Task_Stage__c), 'Late &amp; Blocked'),
    if (Days_Late_Formula__c &gt; 0,  
      if(Len( Text(Task_Stage__c))&gt;0, 'Late ' &amp; text(Task_Stage__c), 'Late'),
      if(Blocked__c == true, 
        if(Len( Text(Task_Stage__c))&gt;0, 'Blocked ' &amp; text(Task_Stage__c), 'Blocked'), 
        if(Len( Text(Task_Stage__c))&gt;0, 'Open ' &amp; Text(Task_Stage__c), 'Open') 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated field indicating if the task is complete, open, late, blocked or late and blocked.</inlineHelpText>
    <label>Overall Status</label>
    <type>Text</type>
</CustomField>