unpackaged/main/default/objects/Milestone1_Task__c/fields/Predecessor_Task__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The predecessor task for this task if applicable.</inlineHelpText>
    <label>Predecessor Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Milestone1_Task__c.Project_Milestone__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_Milestone__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipLabel>Successor Tasks</relationshipLabel>
    <relationshipName>Successor_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>