unpackaged/main/default/objects/Milestone1_Task__c/fields/Short_ID__c.field-meta.xml
<CustomField>
    <fullName>Short_ID__c</fullName>
    <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
    <label>Short ID</label>
    <type>AutoNumber</type>
</CustomField>