unpackaged/main/default/objects/Milestone1_Task__c/fields/Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Number__c</fullName>
    <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
    <label>Task Short ID</label>
    <type>AutoNumber</type>
</CustomField>