unpackaged/main/default/objects/Milestone1_Task__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <inlineHelpText>Calculated from all child expense records</inlineHelpText>
    <label>Total Expense</label>
    <summarizedField>Milestone1_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Milestone1_Expense__c.Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>