unpackaged/main/default/objects/Milestone1_Task__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <inlineHelpText>Calculated from all child time records</inlineHelpText>
    <label>Total Hours</label>
    <summarizedField>Milestone1_Time__c.Hours__c</summarizedField>
    <summaryForeignKey>Milestone1_Time__c.Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>